--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -59,4 +59,4 @@ services:
             POSTGRES_PASSWORD: "pass"
 
 # Sample start command
-# docker-compose -f docker-compose.dev.yml up -d --build --force-recreate
+# docker-compose -f docker-compose.dev.yml up -d --build
