--- a/docker/reverse-proxy/haproxy.cfg
+++ b/docker/reverse-proxy/haproxy.cfg
@@ -29,6 +29,7 @@ backend spa
 backend bff
     option forwardfor
     server bff1 bff:80
+    server bff2 another-bff:80
 
 backend auth
     option forwardfor
