Adjust BFF routes

--- a/docker/reverse-proxy/haproxy.cfg
+++ b/docker/reverse-proxy/haproxy.cfg
@@ -18,7 +18,7 @@ frontend public
 
     # define rules to forward to backends
     use_backend auth if host_auth
-    use_backend bff if host_main { path_beg /api/ }
+    use_backend bff if host_main { path_beg /api/ } || { path_beg /auth/ }
     use_backend spa if host_main
 
 # configure backends that process the requests
